packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__json__tests__snapshot_empty_outdated_json_all_empty.snap
---
source: src/output/json.rs
expression: "&pretty"
---
{
  "current": [],
  "outdated": [],
  "unresolved": []
}
