packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__json__tests__snapshot_plugin_list_order_is_stable.snap
---
source: src/output/json.rs
expression: "&pretty"
---
{
  "plugins": [
    {
      "configPath": "/tmp/opencode.json",
      "declaredOpenCodeRange": ">=1.15.3",
      "description": "description",
      "displayName": "Display Name",
      "installed": true,
      "installedVersion": "1.2.3",
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": null,
      "packageName": "alpha",
      "requestedSpec": "alpha@latest",
      "scope": "project",
      "status": "installed"
    },
    {
      "configPath": "/tmp/global/opencode.json",
      "declaredOpenCodeRange": ">=1.15.3",
      "description": "description",
      "displayName": "Display Name",
      "installed": true,
      "installedVersion": "1.2.3",
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": null,
      "packageName": "zebra",
      "requestedSpec": "zebra@latest",
      "scope": "global",
      "status": "installed"
    }
  ]
}
