packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__json__tests__snapshot_single_installed_plugin_json_shape.snap
---
source: src/output/json.rs
expression: "&pretty"
---
{
  "plugins": [
    {
      "configPath": "/tmp/opencode.json",
      "declaredOpenCodeRange": ">=1.15.3",
      "description": "description",
      "displayName": "Display Name",
      "installed": true,
      "installedVersion": "1.2.3",
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": null,
      "packageName": "my-plugin",
      "requestedSpec": "my-plugin@latest",
      "scope": "project",
      "status": "installed"
    }
  ]
}
