packages/opencode-plugin-manager/src/output/snapshots/oc_plugins__output__json__tests__snapshot_uninstalled_plugin_null_installed_version.snap
---
source: src/output/json.rs
expression: "&pretty"
---
{
  "plugins": [
    {
      "configPath": "/tmp/global/opencode.json",
      "declaredOpenCodeRange": null,
      "description": "description",
      "displayName": "Display Name",
      "installed": false,
      "installedVersion": null,
      "latestDeclaredOpenCodeRange": null,
      "latestVersion": null,
      "packageName": "third-party",
      "requestedSpec": "third-party@latest",
      "scope": "global",
      "status": "missing_install"
    }
  ]
}
